2012-11-02  Charlie Zender  <zender@uci.edu>

	* Built with netCDF-fortran 4.2 and verified netCDF4 works fine

2011-12-31  Charlie Zender  <zender@uci.edu>

	* Change copyright year to 2012

2011-11-16  Charlie Zender  <zender@uci.edu>

	* Change copyright year to 2011. A bit late :)

2010-12-06  Charlie Zender  <zender@uci.edu>

	* Fix broken links on homepage

2010-08-09  Charlie Zender  <zender@uci.edu>

	* Default to NETCDFF=Y and link to libnetcdff.a by default

2009-08-07  Charlie Zender  <zender@uci.edu>

	* Quieted all gfortran implicit r4<->r8 conversion warnings by
	making them all explicit

	* Compiles completely cleanly with OPTS=X under	ifort,xlf95
	Still noisy under gfortran due to implicit r4<->r8 conversion
	Still noisy under g95 due to above and "set but not used" warnings

	* Quiet ifort warnings that comments exceed allowed length

	* Add histout.F90 module so BXM calls outfld() with known interfaces

	* Eliminate most gfortran warnings except r4<->r8 conversion

	* Eliminate all gfortran unused variable warnings by excision or CEWI

2009-08-06  Charlie Zender  <zender@uci.edu>

	* svn copy svn+ssh://zender@dust.ess.uci.edu/home/zender/svn/trunk/dead \
	svn+ssh://zender@dust.ess.uci.edu/home/zender/svn/tags/dead/1.5.0 \
	-m "dead-1.5.0: Fix q_dst() zeroing, numerous build improvements, subversion"

	* Preparing version 1.5.0 release

	* Change logic of copying q_cst() to/from q_dst() so arrays update correctly

	* Quiet gfortran warnings by:
	adding interfaces for tm2nc(), nvr2nc()
	change numerous type conversions from implicit to explicit

2009-08-04  Charlie Zender  <zender@uci.edu>

	* Code still dies with netCDF4 and runs fine with netCDF3
	This can now be demonstrated with run-time switches (no	re-compiling):
	dead -3; dead -4

	* Fully implement netCDF4 choices on command line

	* Move file creation from dstpsd.F90 to main()

	* Add -3 -4 stubs to allow user to specify output filetype (netCDF3/netCDF4)
