@@ -5946,7 +5946,7 @@ crusted soils.
 multi-component dust aerosol over many surface types, and explored the
 sensitivity of the results to a number of assumptions such as
 underlying surface albedo, presence of other aerosols, and snowpack.
-\cite{AHK06} \ldots % fxm: what was this reference?
+% \cite{AHK06} \ldots % fxm: what was this reference?
 \cite{KBB06} predicted that dust-induced snow melt would free Northern
 Asia of snow during the LGM.
 
@@ -6251,7 +6251,8 @@ coefficient to the formulation of the particle and droplet size
 distribution and showed that a lognormal distribution of raindrop
 sizes produce negligible bias compared to other size distributions.
 
-\cite{FHL04} use \SOd\ concentration as a proxy for chemical aging and
+% \cite{FHL04} might be ..., Horowitz, Leovy?
+FHL04 use \SOd\ concentration as a proxy for chemical aging and
 hygroscopicity of mineral aerosol.
 Such aging exacerbates nucleation scavenging of dust downwind of
 polluted regions, and may help explain model underprediction of dust
