@@ -4,7 +4,7 @@
 ! link to machine's native erf functions if available
 ! fxm: Add incomplete gamma function gammq() to gmm_mdl
 
-! Copyright (C) 1994--2014 Charlie Zender
+! Copyright (C) 1994--present Charlie Zender
 ! You may copy, distribute, and/or modify this software under the terms of the GNU General Public License (GPL) Version 2
 ! See http://www.gnu.org/copyleft/gpl.html for full license text
 
