@@ -513,6 +513,20 @@ Mahowald, N.~M., and C.~Luo (2003), A~Less Dusty Future?, \textit{Geophys.\ Res.
   annote =	 {dst mtr vst dps icr pdf Fe pcl plr}
 }
 
+@Article{MRG06,
+  author = 	 {L. Megner and M. Rapp and and J. Gumbel},
+  title = 	 {Distribution of meteoric smoke --- sensitivity to microphysical properties and atmospheric conditions},
+  journal = 	 {Atmos.\ Chem.\ and Phys.},
+  year = 	 2006,
+  key = 	 {Megner06},
+  volume = 	 6,
+  pages = 	 {4415–4426},
+  month = 	 {oct},
+  DOI =          {10.5194/acp-06-4415-2006},
+  URL =          {http://www.atmos-chem-phys.net/6/4415/2006},
+  annote =	 {dst mtr vst dps icr pdf Fe pcl plr mgn}
+}
+
 @Article{LaK062,
   author = 	 {Luca Lanci and Dennis V. Kent},
   title = 	 {Meteoric smoke fallout revealed by superparamagnetism in {Greenland} ice},
@@ -22739,7 +22753,6 @@ Dai, Y., Xubin Zeng, Robert E. Dickinson, Ian Baker, Gordon Bonan, Michael Bosil
   number =	 {D04203},
   month =	 {feb},
   pages =	 {doi:10.1029/2003JD004085},
-  key =		 {Miller04},
   annote =	 {aer dst SRF ARF prp pdf}
 }
 
