@@ -2,7 +2,7 @@
 
 % Purpose: Template for LaTeX files
 
-% Copyright (c) 1998--2017, Charles S. Zender
+% Copyright (c) 1998--present, Charles S. Zender
 % Permission is granted to copy, distribute and/or modify this document
 % under the terms of the GNU Free Documentation License (GFDL), Version 1.3
 % or any later version published by the Free Software Foundation;
@@ -214,7 +214,7 @@ Irvine, CA~~92697-3100 \hfill Fax: (949)\thinspace 824-3256
 
 % GFDL legalities: http://www.gnu.ai.mit.edu/copyleft/fdl.html
 \bigskip\noindent
-Copyright \copyright\ 2000--2013, Charles S. Zender\\
+Copyright \copyright\ 2000--present, Charles S. Zender\\
 Permission is granted to copy, distribute and/or modify this document
 under the terms of the GNU Free Documentation License, Version~1.2
 or any later version published by the Free Software Foundation;
