@@ -1,3 +1,7 @@
+2019-02-05  Charlie Zender  <zender@uci.edu>
+
+	* Change copyright year to end in '--present' to avoid updating annually
+
 2012-11-02  Charlie Zender  <zender@uci.edu>
 
 	* Built with netCDF-fortran 4.2 and verified netCDF4 works fine
